// For generation use:
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/metric.proto

syntax = "proto3";

package metric;

option go_package = "metric/proto";


enum   MetricType {
  GAUGE   = 0;
  COUNTER = 1;
}

message Metric {
  string     name  = 1;  //  Имя метрики
  MetricType type  = 2;  // Параметр принимающий значение gauge или counter
  int64      delta = 3;  // Значение метрики в случае передачи counter
  double     value = 4;  // Значение метрики в случае передачи gauge
  string     hash  = 5;  // Значение хеш-функции
}

message GetMetricRequest {
  Metric metric = 1;  
//  string     name = 1;
//  MetricType type = 2;
}

message GetMetricResponse {
  Metric metric = 1;  
}

message AddMetricRequest {
  Metric metric = 1;
}

message AddMetricResponse {
  Metric metric = 1;  
}

message GetAllMetricsRequest {
}

message GetAllMetricsResponse {
  repeated Metric metrics = 1;
}

message AddBatchMetricsRequest {
  repeated Metric metrics = 1;
}

message AddBatchMetricsResponse {
}

service Metrics {
  rpc GetMetric(GetMetricRequest) returns (GetMetricResponse);
  rpc AddMetric(AddMetricRequest) returns (AddMetricResponse);
  rpc GetAllMetrics(GetAllMetricsRequest) returns (GetAllMetricsResponse);
  rpc AddBatchMetrics(AddBatchMetricsRequest) returns (AddBatchMetricsResponse);
}